# aeonsync

./: .pylintrc  README.md  pyproject.toml
.github/gh/workflows/: ci-cd.yml
.github/workflows/: ci-cd.yml
aeonsync/: __init__.py  aeon.py  backup.py  cli.py  config.py  core.py  list.py  restore.py  utils.py
scripts/: lint.py  release.py
tests/: aeon_tests.py  conftest.py  restore_tests.py  test_aeon.py  test_backup.py  test_cli.py  test_config.py  test_list.py  test_restore.py  test_utils.py
