[tool.poetry]
name = "aeonsync"
version = "0.1.0"
description = "A simple but powerful rsync backup tool"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
rich = "^13.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pylint = "^3.2.7"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aeon = "aeonsync.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.messages_control]
disable = "C0111"

[tool.mypy]
ignore_missing_imports = true