[tool.poetry]
name = "aeonsync"
version = "0.2.0"
description = "A simple but powerful rsync backup tool"
authors = ["Stefanie Jane <stef@hyperbliss.tech>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"
rich = "^13.8.0"
prompt-toolkit = "^3.0.47"
toml = "^0.10.2"
appdirs = "^1.4.4"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.7"
mypy = "^1.11.2"
pytest-cov = "^5.0.0"
types-toml = "^0.10.8.20240310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aeon = "aeonsync.cli:app"
lint = "scripts.lint:run_lint"

[tool.pytest.ini_options]
addopts = "--cov=aeonsync --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["aeonsync"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]

[tool.pylint.messages_control]
disable = "C0111"

[tool.mypy]
ignore_missing_imports = true
